# dot2mmd

./: README.md  __init__.py  cli.py  compiler.py  pyproject.toml  setup.py
dot2mmd/: __init__.py  ast.py  cli.py  compiler.py  convert.py  converter.py  parser.py
examples/: example.dot
tests/: test_converter.py
