[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dot2mmd"
version = "0.1.0"
description = "Convert Graphviz DOT files to MermaidJS .mmd syntax with colors, shapes, and styles"
authors = [{name = "Triple Jay"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
dot2mmd = "dot2mmd.cli:main"
